# gmx_python_sdk

./: a.txt  main.py  pyproject.toml  second.py
gmx_python_sdk/: config.yaml
gmx_python_sdk/scripts/v2/: get_gm_prices.py  get_markets.py  gmx_utils.py
