[tool.poetry]
name = "gmx_python_sdk"
version = "0.0.4"
description = "A python based SDK developed for interacting with GMX v2"

authors = [
  "snipermonke01 <snipermonke01@proton.me>",
  "alienf33t <alienf33t@yahoo.com>"
]
maintainers = [
  "snipermonke01 <snipermonke01@proton.me>",
  "alienf33t <alienf33t@yahoo.com>"
]

repository = "https://github.com/snipermonke01/gmx_python_sdk"

readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
include = ["gmx_python_sdk", "gmx_python_sdk.*"]
namespaces = false

[tool.poetry.dependencies]
python = ">=3.10.4,<4"
aiohttp = "3.9.4"
aiosignal = "1.3.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
bidict = "0.23.1"
bitarray = "2.9.2"
build = "1.2.1"
cachecontrol = "0.14.0"
certifi = "2024.2.2"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
ckzg = "1.0.0"
cleo = "2.1.0"
crashtest = "0.4.1"
cytoolz = "0.12.3"
distlib = "0.3.8"
dulwich = "0.21.7"
eth-account = "0.11.2"
eth-hash = "0.7.0"
eth-keyfile = "0.8.0"
eth-keys = "0.5.0"
eth-rlp = "1.0.1"
eth-typing = "4.1.0"
eth-utils = "4.1.0"
eth-abi = "5.1.0"
fastjsonschema = "2.19.1"
filelock = "3.13.4"
frozenlist = "1.4.1"
h11 = "0.14.0"
hexbytes = "0.3.1"
idna = "3.7"
importlib-metadata = "7.1.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
keyring = "24.3.1"
lru-dict = "1.2.0"
more-itertools = "10.2.0"
msgpack = "1.0.8"
multidict = "6.0.5"
numerize = "0.12"
numpy = "1.26.4"
packaging = "24.0"
pandas = "2.2.2"
parsimonious = "0.10.0"
pexpect = "4.9.0"
pkginfo = "1.10.0"
platformdirs = "4.2.0"
poetry = "1.8.2"
poetry-core = "1.9.0"
poetry-plugin-export = "1.7.1"
protobuf = "5.26.1"
ptyprocess = "0.7.0"
pycparser = "2.22"
pycryptodome = "3.20.0"
pyproject-hooks = "1.0.0"
python-dateutil = "2.9.0.post0"
python-engineio = "4.9.0"
python-socketio = "5.11.2"
pytz = "2024.1"
pyunormalize = "15.1.0"
pyyaml = "6.0.1"
rapidfuzz = "3.8.1"
referencing = "0.34.0"
regex = "2023.12.25"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
rlp = "4.0.0"
rpds-py = "0.18.0"
shellingham = "1.5.4"
simple-websocket = "1.0.0"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.12.4"
toolz = "0.12.1"
trove-classifiers = "2024.4.10"
typing-extensions = "4.11.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
virtualenv = "20.25.1"
web3 = "6.17.1"
websockets = "12.0"
wsproto = "1.2.0"
xattr = "1.1.0"
yarl = "1.9.4"
zipp = "3.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
